
plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

test {
	failOnNoDiscoveredTests = false
}

// Get short git commit hash (e.g. "a1b2c3d"), returns "unknown" if git unavailable
def gitHash = {
	try {
		def hash = "git rev-parse --short=8 HEAD".execute().text.trim()
		return hash.isEmpty() ? "unknown" : hash
	} catch (Throwable ignored) {
		return "unknown"
	}
}

def gitSuffix = project.hasProperty('append_git_hash') && append_git_hash.toBoolean() \
	? "+" + gitHash() \
	: ""

project.mod_version = mod_version_prefix + mod_version_suffix + gitSuffix

group = project.maven_group

base {
	version = project.mod_version
	archivesName = project.archives_base_name
}

repositories {
	maven {
		name = "Lenni0451"
		url = "https://maven.lenni0451.net/releases"

		content {
			includeGroup "net.lenni0451"
		}
	}
	// mavenCentral()
	maven {url = 'https://maven.fallenbreath.me/releases'
		content {includeGroupAndSubgroups("me.fallenbreath")}
	}
	maven { url = 'https://jitpack.io' }
	maven { url = 'https://maven.terraformersmc.com/releases/' }
	maven { url = "https://api.modrinth.com/maven" }
	maven { url = "https://cursemaven.com"}
	maven {
		url = "https://www.cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

loom {
	splitEnvironmentSourceSets()
	mods {
		"LPCTools" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
	accessWidenerPath = file("src/client/resources/lpctools.accesswidener")
}

dependencies {

	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	// mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	// mappings loom.officialMojangMappings()

	// Relied mods & their required lib(s)
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "maven.modrinth:malilib:${project.malilib_version}"
	implementation "me.fallenbreath:conditional-mixin-fabric:${project.conditionalmixin_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Suggested mods
	compileOnly "maven.modrinth:minihud:${project.minihud_version}"
	// runtimeOnly "maven.modrinth:minihud:${project.minihud_version}"
	compileOnly "maven.modrinth:litematica:${project.litematica_version}"
	// runtimeOnly "maven.modrinth:litematica:${project.litematica_version}"
	compileOnly "maven.modrinth:tweakeroo:${project.tweakeroo_version}"
	// runtimeOnly "maven.modrinth:tweakeroo:${project.tweakeroo_version}"

	// Test mods
	// compileOnly "maven.modrinth:fabric-permissions-api:${project.fabric_permissions_api_version}"
	// runtimeOnly "maven.modrinth:fabric-permissions-api:${project.fabric_permissions_api_version}"
	compileOnly "maven.modrinth:placeholder-api:${project.placeholder_api_version}"
	runtimeOnly "maven.modrinth:placeholder-api:${project.placeholder_api_version}"
	compileOnly "maven.modrinth:modmenu:${project.mod_menu_version}"
	runtimeOnly "maven.modrinth:modmenu:${project.mod_menu_version}"
	// compileOnly "maven.modrinth:spark:${project.spark_version}"
	runtimeOnly "maven.modrinth:spark:${project.spark_version}"
	// compileOnly "maven.modrinth:sodium:${project.sodium_version}"
	runtimeOnly "maven.modrinth:sodium:${project.sodium_version}"
	// compileOnly "maven.modrinth:iris:${project.iris_version}"
	runtimeOnly "maven.modrinth:iris:${project.iris_version}"
	// compileOnly "maven.modrinth:immediatelyfast:${project.immediatelyfast_version}"
	runtimeOnly "maven.modrinth:immediatelyfast:${project.immediatelyfast_version}"
	compileOnly "net.lenni0451:Reflect:${project.reflect_version}"
	runtimeOnly "net.lenni0451:Reflect:${project.reflect_version}"
	// compileOnly "maven.modrinth:viafabricplus:${project.viafabricplus_version}"
	runtimeOnly "maven.modrinth:viafabricplus:${project.viafabricplus_version}"
	// compileOnly "maven.modrinth:xaeros-world-map:${project.xaero_world_map_version}"
	runtimeOnly "maven.modrinth:xaeros-world-map:${project.xaero_world_map_version}"
	// compileOnly "maven.modrinth:xaeros-minimap:${project.xaero_minimap_version}"
	runtimeOnly "maven.modrinth:xaeros-minimap:${project.xaero_minimap_version}"
}

processClientResources {
	inputs.property "mod_version", project.version

	filesMatching("fabric.mod.json") {
		expand "mod_version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
